Minity.css
/*  ============================================================================
    Minity CSS stylesheet for Whoaverse (http://whoaverse.com/)
    Designed by Nurdoidz
    
    Stylesheet on Github: http://github.com/Nurdoidz/Minity-WhoaVerse/
    ============================================================================ */



/* ! Body
================================================================================ */

    body {
        background:  none;
        color:       #333;
        font:        10px Arial,sans-serif;
        line-height: 1.43;
        margin:      0;
    }

    a,a:visited {color: #4AABE7; text-decoration: none;}
    a:hover {color: #66C2FB; text-decoration: none;}

    a.author {margin: 0 3px;}

    b,strong {font-weight: bold;}

    h2 {color: #333; font-size: 13px;}

    hr {
        margin: 10px 0;
        border-color: #CCC;
    }

    label {font-size: 12px; font-weight: normal;}

    .alert {
        -webkit-border-radius: 3px;
        border-radius:         3px;
    }

    .alert-info {
        background:   #F5B563;
        background:   -webkit-linear-gradient(top,#F5B563,#EFA544);
        background:   -moz-linear-gradient(top,#F5B563,#EFA544);
        background:   -ms-linear-gradient(top,#F5B563,#EFA544);
        background:   -o-linear-gradient(top,#F5B563,#EFA544);
        border-color: #E19C42;
        color:        #FFF;
        font-size:    12px;
    }

    .menuarea {
        border:    0;
        font-size: 11px;
        margin:    5px;
        overflow:  hidden;
        padding:   0;
    }

        .menuarea .spacer {display: inline; margin: 0;}

            .dropdown.lightdrop .selected {color: inherit; text-decoration: none;}

    .midcol {
        background:   none;
        float:        left;
        margin-left:  7px;
        margin-right: 10px;
        overflow:     hidden;
    }

    .paragraph-text-left {
        font-size:   inherit;
        text-align:  left;
    }

    .separator {
        color:  inherit;
        margin: 0 2px;
    }

    .submissionscore {
        background:            #F6F6F6;
        border:                1px solid #E8E8E8;
        -webkit-border-radius: 2px;
        border-radius:         2px;
        display:               inline-block;
        font-weight:           normal;
        min-width:             40px;
        padding:               3px;
        text-align:            center;
    }

    .subreddit {margin: 0;}

    .tagline {
        color:       #868686;
        font-size:   12px;
        line-height: 18px;
    }

    .tagline a {color: #4AABE7; text-decoration: none;}
    .tagline a:visited {color: #4399CD;}
    .tagline a:hover {color: #4399CD; text-decoration: underline;}

        .tagline .submitter {color: #4AABE7;}
        .tagline .moderator {color: #3FBF4C;}
        .tagline .admin {color: #E12D39;}

    .text-danger:hover {color: #FFF;}

    .user {color: inherit;}

        .user .userkarma {
            border-bottom: 1px dotted #999;
            cursor:        help;
            font-weight:   normal;
            margin:        0 2px;
        }

    .usertext {font-size: 14px;}

    
    /* ! Body : Buttons
    -------------------------------------------------------------------------------- */

        .btn-block {display: block; width: 100%;}

        .btn-whoaverse {
            background:            #F8F8F8;
            background:            -webkit-linear-gradient(top,#FDFDFD,#F7F7F7);
            background:            -moz-linear-gradient(top,#FDFDFD,#F7F7F7);
            background:            -ms-linear-gradient(top,#FDFDFD,#F7F7F7);
            background:            -o-linear-gradient(top,#FDFDFD,#F7F7F7);
            border:                1px solid #DFDFDF;
            -webkit-border-radius: 3px;
            border-radius:         3px;
            color:                 #4C4C4C;
            display:               inline-block;
            font-size:             12px;
            padding:               6px;
            text-align:            center;
        }
        .btn-whoaverse:hover {
            background:         #F4F4F4;
            background:         -webkit-linear-gradient(top,#F4F4F4,#EEE);
            background:         -moz-linear-gradient(top,#F4F4F4,#EEE);
            background:         -ms-linear-gradient(top,#F4F4F4,#EEE);
            background:         -o-linear-gradient(top,#F4F4F4,#EEE);
            -webkit-box-shadow: 0 1px 0 #DFDFDF;
            box-shadow:         0 1px 0 #DFDFDF;
            color:              #444;
        }
        .btn-whoaverse:active {position: relative; top: 1px;}
        .btn-whoaverse.disabled,.btn-whoaverse[disabled],fieldset[disabled] .btn {
            cursor:             not-allowed;
            pointer-events:     none;
            opacity:            0.65;
            filter:             alpha(opacity=65);
            -webkit-box-shadow: none;
            box-shadow:         none;
        }

        .btn-whoaverse-paging {
            background:            #4AABE7;
            background:            -webkit-linear-gradient(top,#54B5F1,#4AABE7);
            background:            -moz-linear-gradient(top,#54B5F1,#4AABE7);
            background:            -ms-linear-gradient(top,#54B5F1,#4AABE7);
            background:            -o-linear-gradient(top,#54B5F1,#4AABE7);
            border:                1px solid #4C9FD2;
            -webkit-border-radius: 2px;
            border-radius:         2px;
            color:                 #FFF;
            display:               inline-block;
            font-size:             10px;
            padding:               2px 6px;
            text-align:            center;
        }
/* ... */

